Fix left column contents size issue on smaller screen.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -231,3 +231,16 @@ div#page-document {
     top: 1em;
   }
 }
+
+@media only screen and (max-width: 1080px) {
+  div.facets {
+    div.toggleSort {
+      display: initial;
+
+      select.match-select {
+        margin-bottom: 3px;
+        margin-left: 0px;
+      }
+    }
+  }
+}
